Finish happycult website

--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
 <link rel="stylesheet" href="dist/app.css">
 </head>
 <body>
+  <div class="header">
+    <h1>Happycult!!! 8-)</h1>
+  </div>
 
-<h1>Puck Template</h1>
+  <img src="https://pbs.twimg.com/media/BUGInXQCAAAR5kM.jpg" class="cult-photo">
 
+<div class="about">
+  <h3><u>About Our Happy Family</u></h3>
+  <p><h4> We drink kool-aid. We drink the blood of virgins. We're totally a cult. </p>
+  <p> Do you feel alienated from society? Do you believe things that others tell you? Do you like to braid your pubic hair?</p>
+  <p><b>JOIN US!</b> We're actively recruiting new folks to breed and commit mass suicide with.</h4></p>
+</div>
+
+<div class="satan">
+</div>
+
+<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="dist/js/satan.js"></script>
 <script src="dist/js/bundle.js"></script>
 
 </body>
